@@ -5,6 +5,7 @@ Unreleased
 ======
 ## Fixed
  - Add missing VariableDrawer for ObjectVariable. Thanks to CG-Tespy.
+ - Fix double duplication of blocks in flowchart window. Thanks to ongjinwen.
  
 ## Changed
  - Block will LogError when an exception is caught from a Command being Executed.
